# hyperstyle-analysis-prod

./: .dockerignore  .flake8  .gitignore  .space.kts  Dockerfile  Dockerfile.base  LICENSE  README.md  paddle.yaml  pyproject.toml  spellcheck_whitelist.txt
.github/workflows/: build.yml  docker-release.yml  paddle-test.yml  templates.yml
core/: paddle.yaml  requirements.txt
core/src/core/model/: column_name.py
core/src/core/utils/: df_utils.py  extension_utils.py  file_utils.py  logging_utils.py  parsing_utils.py  report_utils.py  stats_utils.py  subprocess_runner.py
core/src/model/: column_name.py
core/src/model/api/: platform_objects.py
core/src/model/quality/: quality.py  report.py
core/src/model/report/: hyperstyle_report.py  qodana_report.py  quality_report.py
core/src/utils/: df_utils.py  logging_utils.py  stats_utils.py  subprocess_runner.py
core/src/utils/file/: extension_utils.py  file_utils.py  saving_utils.py  yaml_utils.py
core/src/utils/quality/: code_utils.py  report_utils.py
data_collection/: README.md  paddle.yaml  requirements.txt
data_collection/src/: collect_data.py
data_collection/src/api/: platform_auth.py  platform_client.py
data_collection/src/data_collection/: collect_data.py
data_collection/src/data_collection/api/: collect_data.py  platform_auth.py  platform_client.py
data_collection/src/data_collection/hyperskill/: README.md  hyperskill_client.py
data_collection/src/data_collection/stepik/: README.md  stepik_client.py
data_collection/src/data_collection/utils/: csv_utils.py
data_collection/src/hyperskill/: README.md  hyperskill_client.py  hyperskill_objects.py
data_collection/src/hyperskill/api/: projects.py  search_results.py  steps.py  submissions.py  topics.py  tracks.py  users.py
data_collection/src/stepik/: README.md  stepik_client.py  stepik_objects.py
data_collection/src/stepik/api/: courses.py  lessons.py  search_results.py  steps.py  submissions.py  users.py
data_collection/src/utils/: csv_utils.py
data_collection/tests/: test_run_data_collection.py
data_collection/tests/data_collection_tests/: test_run_data_collection.py
data_labelling/: paddle.yaml  requirements.txt
data_labelling/src/data_labelling/hyperstyle/: README.md  evaluate.py  evaluation_args.py  hyperstyle_evaluation_config.py
data_labelling/src/hyperstyle/: README.md  evaluate.py  evaluation_args.py  hyperstyle_evaluation_config.py
data_labelling/src/utils/: args_utils.py  evaluation_config.py  evaluation_utils.py  file_util.py
data_labelling/tests/hyperstyle/: test_run_evaluate.py
jba/: README.md  paddle.yaml  requirements.txt
jba/src/: common.py
jba/src/gathering/: gather_submissions_info.py
jba/src/inspections/: analysis.py  gathering.py
jba/src/jba/models/: edu_columns.py  (+2 more)
jba/src/jplag/: jplag_config.py  jplag_runner.py  submissions_converter.py  visualization.py
jba/src/models/: edu_columns.py  edu_logs.py  edu_structure.py
jba/src/plots/: task_attempt.py  task_duplicates.py  task_solving.py  task_stat.py  util.py
jba/src/processing/: collect_course_structure.py  data_processing.py  prepare_course_data.py  tasktracker_content_collector.py  tasktracker_edu_validation.py  tasktracker_platform_step_mapping.py  tasktracker_task_filter.py
jba/src/test_logs/: analysis.py  logs_parser.py  parsers.py  tests_analysis.py  tests_runner.py
jba/src/visualization/: README.py  common.py
jba/tests/jba_tests/: __init__.py
jba/tests/plots/: test_task_duplicates.py
jba/tests/processing/: __init__.py  test_collect_course_structure.py  test_prepare_course_data.py  test_run_data_processing.py  test_tasktracker_content_collector.py
jba/tests/test_logs/: __init__.py  test_logs_parser.py  test_parsers.py  test_tests_analysis.py  test_tests_runner.py
preprocessing/: README.md  paddle.yaml  requirements.txt
preprocessing/src/: preprocess_steps.py  preprocess_submissions.py  preprocess_topics.py
preprocessing/src/preprocessing/: preprocess_steps.py  preprocess_submissions.py  preprocess_topics.py
preprocessing/tests/: __init__.py
preprocessing/tests/preprocess_submissions/: test_run_preprocess_submissions.py
preprocessing/tests/preprocessing_tests/: __init__.py
preprocessing/tests/resources/: submissions.csv
templates/: README.md  __init__.py  paddle.yaml  requirements.txt
templates/src/diffs/: README.md  filter_by_diff.py
templates/src/freq/: README.md  filter_by_freq.py  postprocess.py  search_template_issues.py
templates/src/utils/: template_utils.py
templates/test/: __init__.py
templates/test/templates/: __init__.py
templates/tests/: __init__.py
templates/tests/diffs/: __init__.py  test_cleanup_sematic.py  test_code_template_diff.py  test_filter_template_issues_using_diff.py  test_run_filter_by_diff.py
templates/tests/freq/: __init__.py  test_code_compare.py  test_filter_template_issues.py  test_get_repetitive_issues.py  test_run_postprocessing.py  test_run_search_template_issues.py  test_template_matching.py
templates/tests/templates/: __init__.py
templates/tests/templates_tests/: __init__.py
(+165 files in other folders)
